fixed spacing

--- a/My Work/styles.css
+++ b/My Work/styles.css
@@ -64,6 +64,7 @@ h3 {
     margin: 30px;
     text-shadow: 0.5px 0.5px 1px rgba(0, 0, 0, 0.3);
     display: flex;
+    flex: left;
     align-items: center;
     justify-content: center;
     text-align: center;
